kubernets/emqx.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: emqx
  namespace: custom
  labels:
    app: emqx
spec:
  ports:
    - name: emqx-dashboard
      protocol: TCP
      port: 18083
      targetPort: 18083
  selector:
    app: emqx
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: emqx
  namespace: custom
spec:
  replicas: 3
  selector:
    matchLabels:
      app: emqx
  template:
    metadata:
      labels:
        app: emqx
    spec:
      hostname: emqx
      serviceAccountName: emqx 
      containers:
        - name: emqx
          image: registry.cn-chengdu.aliyuncs.com/susoncloud-base/emqx:v3.2.7                                             ###习惯了centos7，所以自己制作了镜像
          imagePullPolicy: Always 
          ports:
            - name: emqx-mqtt
              containerPort: 1883
            - name: emqx-websocket
              containerPort: 8083
            - name: emqx-httpapi
              containerPort: 8080
            - name: emqx-dashboard
              containerPort: 18083
            - containerPort: 4369
            - containerPort: 5369
            - containerPort: 6369
          tty: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: aliyun                                                                                                       ###根据运营商自己创建
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
